minor formatting updates

--- a/notebooks/To_be_a_robot.ipynb
+++ b/notebooks/To_be_a_robot.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What is it like to be a robot?"
+    "# Computational Essays in Artificial Intelligence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is it like to be a robot?"
    ]
   },
   {
@@ -15,21 +22,21 @@
     "\n",
     "German biologist Jakob Von Uexk&uuml;ll developed the term *umwelt* to capture the idea of how the world is experienced by a particular organism.  When translated from German this equates to \"self-centered world\". For a dog the world is dominated by smell, whereas for most humans the world is experienced primarily through vision. \n",
     "\n",
-    "Here we will explore a robot's umwelt, and try to imagine what is it like to be a robot."
+    "Here we will explore a robot's umwelt, and try to imagine what is it like to be a robot. We will use a robot with both range sensors and a camera."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0.9.26'"
+       "'0.9.32'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,14 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random seed set to: 9917436\n"
+      "Random seed set to: 6515974\n"
      ]
     }
    ],
@@ -91,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -99,7 +106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28ecff6d237e4342a0e9d65364490eeb",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -126,13 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2404ea371c2e46aa9584e77200a7f332",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -146,7 +153,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e16c1225b1c44958e7a424e58211e3f",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -160,7 +167,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2df1d398e6c74033aa68d889a8072824",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -174,7 +181,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "161686d17ca144b893856faf0d79f32b",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,15 +243,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using random seed: 9917436\n",
-      "Simulation stopped at: 00:00:10.0; speed 0.98 x real time\n"
+      "Using random seed: 6515974\n",
+      "Simulation stopped at: 00:00:10.0; speed 0.97 x real time\n"
      ]
     }
    ],
@@ -259,14 +266,18 @@
    "source": [
     "## Experience the world as the robot does\n",
     "\n",
-    "Seeing the world through the robot's camera is very different then seeing it from the bird's-eye view.  Let's try to really take the robot's perspective. Hide the top-down view of the world. Now you will try to control the robot using only the robot's sensors to guide you. You goal is to traverse the hallway to the the yellow room and approach the pink box there.  \n",
+    "Seeing the world through the robot's camera is very different then seeing it from the bird's-eye view.  Let's try to really take the robot's perspective. \n",
+    "\n",
+    "**Hide the top-down view of the world.** \n",
+    "\n",
+    "Now you will try to control the robot using only the robot's sensors to guide you. You goal is to traverse the hallway to the the yellow room and approach the pink box there.  \n",
     "\n",
     "We will create a dashboard where you can see all the robot's sensor readings and you can control the robot's movements via a joystick. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -292,7 +303,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7435ee9248a046fb9c006ca0136685e7",
+       "model_id": "0151dc66b02b4c00bb87079f99dacd65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -306,7 +317,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82fe65ca2cc54842bfea7717b77b5900",
+       "model_id": "172b2fea61e4455190d4e6580488bb15",
        "version_major": 2,
        "version_minor": 0
       },
@@ -320,7 +331,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2377a5bd3d14c369f64406826b37137",
+       "model_id": "6a74d8a8959749d2929be221aeb0eb4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -352,12 +363,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Execute the cell below when you are ready to start controlling the robot via the dashboard. Use your mouse to push the joystick in different directions. The \"Stalled\" sensor is True when the robot is stuck and unable to move in the current direction.  If this happens try reversing the direction of movement. The \"IR\" sensors detect obstacles on the robot's left and right.  The smaller the value the closer the obstacle."
+    "Execute the cell below when you are ready to start controlling the robot via the dashboard. Use your mouse to push the joystick in different directions. The \"Stalled\" sensor is True when the robot is stuck and unable to move in the current direction.  If this happens try reversing the direction of movement. The \"IR\" sensors detect obstacles on the robot's left and right.  The smaller the value the closer the obstacle.\n",
+    "\n",
+    "If you get stuck at some point, go ahead and look at the top-down view of the world again.  Then try to get unstuck and continue using the joystick to reach the goal."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
