--- a/notebooks/Novelty_Coverage.ipynb
+++ b/notebooks/Novelty_Coverage.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "Joel Lehman and Kenneth Stanley first introduced the novelty search algorithm in a 2008 paper entitled *Exploiting open-endedness to solve problems through the search for novelty* which was published in the proceedings of the ALIFE conference.\n",
     "\n",
-    "Rather than searching for a particular objective, the goal of novelty search is to discover unique **behaviors**. It accomplishes this by maintaining an archive of previous behaviors it has found.  The archive has a limited size, and only behaviors that are deemed novel enough are stored in the archive. The novelty of a behavior is defined as the *average distance from its k-nearest neighbors* in the archive. A behavior must have a novelty score above a given threshold to be retained in the archive. "
+    "Rather than searching for a particular objective, the goal of novelty search is to discover unique **behaviors**. It accomplishes this by maintaining an archive of previous behaviors it has found.  The archive has a limited size, and only behaviors that are deemed novel enough are stored in the archive. The novelty of a behavior is defined as the *normalized average distance from its k-nearest neighbors* in the archive. Because novelty is a normalized quantity it will always be in the range `[0,1]`. A behavior must have a novelty score above a given threshold to be retained in the archive. "
    ]
   },
   {
@@ -75,7 +75,7 @@
     "\n",
     "Then to calculate novelty we will look at the distance between the k nearest neighbor behavior sequences in the archive. If the average distance from these k nearest neighbors is high enough, then the behavior is considered novel.\n",
     "\n",
-    "The following function is used to determine a quick upper bound on the maximum possible distance between two behavior sequences. It simply computes the maximum distance between two locations in the grid, and multiplies that times the number of maximum possible number of moves."
+    "The following function is used to determine a quick upper bound on the maximum possible distance between two behavior sequences. This is needed to compute the *normalized* average distance. It simply calculates the maximum distance between two locations in the grid, and multiplies that times the number of maximum possible number of moves."
    ]
   },
   {
@@ -136,7 +136,8 @@
     "---------|-----------|---------------\n",
     "k        |size of neighborhood| 15\n",
     "limit    |size of archive| 100\n",
-    "threshold|min avg dist for novelty|0.15\n",
+    "threshold|min normalized avg dist|0.075\n",
+    "max_dist |max dist between behaviors|1272\n",
     "\n",
     "If *k* is too low, the criteria for novelty may be too easy to achieve.\n",
     "\n",
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "metadata": {
     "id": "QEeYh6UwUGvA"
    },
@@ -198,7 +199,7 @@
     "            threshold=0.075,\n",
     "            max_dist=get_max_distance(grid_size),\n",
     "        )\n",
-    "        self.pad = (4,4)\n",
+    "        self.pad = (4,4) # the point used to pad behavior sequences\n",
     "        self.show = False\n",
     "        self.sensors = sensors\n",
     "        self.world = World(200, 200)\n",
@@ -956,7 +957,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some of the behaviors found are quite interesting.  You can explore one in more depth by letting it run longer than the 60 seconds used during fitness testing in evolution. Try letting it run twice or three times as long.  Does it get even better coverage under these conditions?"
+    "Some of the behaviors found are quite interesting.  You can explore one in more depth by letting it run longer than the 60 seconds used during fitness testing in evolution. Try letting it run twice or three times as long (the time limit is the second parameter in the test_coverage method below).  Does it get even better coverage when given more time to run?"
    ]
   },
   {
@@ -977,6 +978,23 @@
     "chromo = ga.novelty_search.archive[archive_index][2]\n",
     "coverage = ga.test_coverage(chromo, 180)\n",
     "print(coverage)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusions\n",
+    "\n",
+    "Lehman and Stanley note that novelty search is best suited for domains that have:\n",
+    "\n",
+    "* Deceptive fitness landscapes\n",
+    "* Intuitive behavior characterization\n",
+    "* Constraints on the possible set of behaviors\n",
+    "\n",
+    "For the coverage task explored here, we constrained the set of possible behaviors by imposing a grid on top of the world, and then limited the behavior description to the total number of grid locations. \n",
+    "\n",
+    "Although this task may not be deceptive, there are a huge diversity of possible successful behaviors. Applying novelty search to this task allows the GA to better find a collection of both unique and successful coverage strategies."
    ]
   },
   {
