numpy and tensorflow is required by aitk.networks

--- a/notebooks/Robot_Memory.ipynb
+++ b/notebooks/Robot_Memory.ipynb
@@ -25,12 +25,10 @@
    "source": [
     "## 1. Setup\n",
     "\n",
-    "For this discussion, we will create a robot in a small world. The robot's brain will be a simple, 3-layer, feed-forward artificial neural network. We will use `aitk` for simulated robots and artifical neural networks. We will also need `numpy` and `tensorflow`. If you do not have those installed you will need to copy the following into a cell and execute them:\n",
+    "For this discussion, we will create a robot in a small world. The robot's brain will be a simple, 3-layer, feed-forward artificial neural network. We will use `aitk` for simulated robots and artifical neural networks. If you do not have this installed you will need to copy the following into a cell and execute it:\n",
     "\n",
     "```ipython\n",
-    "%pip install numpy --quiet\n",
-    "%pip install tensorflow --quiet\n",
-    "%pip install aitk --quiet\n",
+    "%pip install aitk --upgrade --quiet\n",
     "```"
    ]
   },
