Update GA.fitness() to allow accepting index

--- a/notebooks/CartWorld.ipynb
+++ b/notebooks/CartWorld.ipynb
@@ -201,7 +201,7 @@
     "        else:\n",
     "            return robot.reward # out of bounds\n",
     "\n",
-    "    def fitness(self, chromosome, \n",
+    "    def fitness(self, chromosome, index=None, \n",
     "                real_time=False, \n",
     "                show_progress=False):\n",
     "        self.network.set_weights(chromosome)\n",
