--- a/notebooks/EvolvingRobotControl.ipynb
+++ b/notebooks/EvolvingRobotControl.ipynb
@@ -247,7 +247,7 @@
    "outputs": [],
    "source": [
     "class NNGA(NNGA):        \n",
-    "    def fitness(self, chromosome, poses=None, seconds=None, interrupt=True, real_time=False,\n",
+    "    def fitness(self, chromosome, index=None, poses=None, seconds=None, interrupt=True, real_time=False,\n",
     "                show=False, show_progress=False, quiet=True):\n",
     "        \"\"\"\n",
     "        Fitness is based on the distance the robot travels \n",
