--- a/notebooks/MazeSearch.ipynb
+++ b/notebooks/MazeSearch.ipynb
@@ -129,7 +129,7 @@
     "        return 2 - random.random() * 4 \n",
     "    def mutate_gene(self, gene):\n",
     "        return gene + (0.5 - random.random())\n",
-    "    def fitness(self, chromosome, seconds=60, interrupt=True, real_time=False,\n",
+    "    def fitness(self, chromosome, index=None, seconds=60, interrupt=True, real_time=False,\n",
     "                show=False, show_progress=False, quiet=True):\n",
     "        \"\"\"During search, fitness is based on novelty\"\"\"\n",
     "        self.show = show\n",
