--- a/notebooks/NNGA_Coverage.ipynb
+++ b/notebooks/NNGA_Coverage.ipynb
@@ -239,7 +239,7 @@
    "outputs": [],
    "source": [
     "class NNGA(NNGA):        \n",
-    "    def fitness(self, chromosome, seconds=60, interrupt=True, real_time=False,\n",
+    "    def fitness(self, chromosome, index=None, seconds=60, interrupt=True, real_time=False,\n",
     "                show=False, show_progress=False, quiet=True):\n",
     "        self.show = show\n",
     "        self.network.set_weights(chromosome)\n",
