--- a/notebooks/Novelty_Coverage.ipynb
+++ b/notebooks/Novelty_Coverage.ipynb
@@ -286,7 +286,7 @@
    "outputs": [],
    "source": [
     "class NoveltyGA(NoveltyGA):        \n",
-    "    def fitness(self, chromosome, seconds=60, interrupt=True, real_time=False,\n",
+    "    def fitness(self, chromosome, index=None, seconds=60, interrupt=True, real_time=False,\n",
     "                show=False, show_progress=False, quiet=True):\n",
     "        \"\"\"During search, fitness is based on novelty\"\"\"\n",
     "        self.show = show\n",
