--- a/notebooks/Robot_Memory.ipynb
+++ b/notebooks/Robot_Memory.ipynb
@@ -572,7 +572,7 @@
     "    def mutate_gene(self, gene):\n",
     "        return gene + 0.05 - random.random() * 0.10\n",
     "\n",
-    "    def fitness(self, chromosome, seconds=8.0, real_time=False):\n",
+    "    def fitness(self, chromosome, index=None, seconds=8.0, real_time=False):\n",
     "        robot = world.robots[0]\n",
     "        robot.state[\"show\"] = real_time\n",
     "        self.network.set_weights(chromosome)\n",
