--- a/notebooks/StringGA.ipynb
+++ b/notebooks/StringGA.ipynb
@@ -31,7 +31,7 @@
     "    def decode(self, s): return [chr(ord(ch) - 13) for ch in s]\n",
     "    def encode(self, s): return [chr(ord(ch) + 13) for ch in s]\n",
     "    \n",
-    "    def fitness(self, chromosome):\n",
+    "    def fitness(self, chromosome, index=None):\n",
     "        \"\"\"\n",
     "        Fitness is the total number of matching characters.\n",
     "        \"\"\"\n",
