--- a/notebooks/SumGA.ipynb
+++ b/notebooks/SumGA.ipynb
@@ -21,7 +21,7 @@
     "    An example of using the GeneticAlgorithm class to solve a particular\n",
     "    problem, in this case finding strings with the maximum number of 1's.\n",
     "    \"\"\"\n",
-    "    def fitness(self, chromosome):\n",
+    "    def fitness(self, chromosome, index=None):\n",
     "        \"\"\"\n",
     "        Fitness is the sum of the bits.\n",
     "        \"\"\"\n",
