--- a/notebooks/Braitenberg_Vehicles.ipynb
+++ b/notebooks/Braitenberg_Vehicles.ipynb
@@ -61,8 +61,7 @@
     }
    ],
    "source": [
-    "from aitk.robots import World, Vehicle, LightSensor, SmellSensor, __version__\n",
-    "__version__"
+    "from aitk.robots import World, Vehicle, LightSensor, SmellSensor",
    ]
   },
   {
