--- a/notebooks/FunWithLight.ipynb
+++ b/notebooks/FunWithLight.ipynb
@@ -26,8 +26,7 @@
     }
    ],
    "source": [
-    "from aitk.robots import World, Scribbler, RangeSensor, LightSensor, Bulb, __version__\n",
-    "__version__"
+    "from aitk.robots import World, Scribbler, RangeSensor, LightSensor, Bulb",
    ]
   },
   {
