--- a/notebooks/HillClimbing.ipynb
+++ b/notebooks/HillClimbing.ipynb
@@ -24,8 +24,7 @@
     }
    ],
    "source": [
-    "from aitk.robots import World, Scribbler, SmellSensor, __version__\n",
-    "__version__"
+    "from aitk.robots import World, Scribbler, SmellSensor",
    ]
   },
   {
