--- a/notebooks/To_be_a_robot.ipynb
+++ b/notebooks/To_be_a_robot.ipynb
@@ -29,16 +29,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Setup\n",
-    "\n",
-    "This **Computational Essay** requires the following Python modules: \n",
-    "\n",
-    "* [aitk.robots](https://github.com/ArtificialIntelligenceToolkit/aitk.robots)\n",
-    "\n",
-    "Environment-specific notebooks can be found at:\n",
-    "[AITK Computational Essays](https://github.com/ArtificialIntelligenceToolkit/aitk/blob/master/ComputationalEssays.md)\n",
-    "\n",
-    "Otherwise, to see specific setup instructions for your local environment, please see: [AITK Python Installation](https://github.com/ArtificialIntelligenceToolkit/aitk#python-installation)"
+    "## 1. Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install aitk --quiet"
    ]
   },
   {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random seed set to: 699003\n"
+      "Random seed set to: 5131871\n"
      ]
     }
    ],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -115,7 +115,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b284bf9858e4e33819799e48715cfd8",
+       "model_id": "019f58fe04ed4c909b5e495388c61808",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,13 +140,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74cd934ce87849e4a1dfece7f49a9052",
+       "model_id": "5139db5527ea48d88f841aaa7e9202fb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -160,7 +160,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a669e324fe274d67a18de0cf3232eb92",
+       "model_id": "9754f0e247d141f3846856200e5559d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -174,7 +174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26e3e20c46024d6da44afe17c536a7fa",
+       "model_id": "eae0480601b54618a44ddbf6dd387f9d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -188,12 +188,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d32ba535c8fc4177831bf052b26d884d",
+       "model_id": "0515e0d60fb04c1dafb7d78783a73458",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b\"\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\x00\\x80\\x00\\x00\\x00@\\x08\\x06\\x00\\x00\\x00\\xd2\\xd6\\x7f…"
+       "Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\x00\\x80\\x00\\x00\\x00@\\x08\\x06\\x00\\x00\\x00\\xd2\\xd6\\x7f…"
       ]
      },
      "metadata": {},
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,20 +250,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using random seed: 699003\n"
+      "Using random seed: 5131871\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56a03b36023e42fd8801088e58ea830c",
+       "model_id": "fbc3916944c84f8b9b33d0d6be577155",
        "version_major": 2,
        "version_minor": 0
       },
@@ -278,7 +278,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Simulation stopped at: 00:00:10.00; speed 0.96 x real time\n"
+      "Simulation stopped at: 00:00:10.00; speed 0.97 x real time\n"
      ]
     }
    ],
@@ -471,7 +471,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -485,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.13"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
