--- a/notebooks/Braitenberg_Vehicles.ipynb
+++ b/notebooks/Braitenberg_Vehicles.ipynb
@@ -61,7 +61,7 @@
     }
    ],
    "source": [
-    "from aitk.robots import World, Vehicle, LightSensor, SmellSensor",
+    "from aitk.robots import World, Vehicle, LightSensor, SmellSensor"
    ]
   },
   {
