--- a/notebooks/FunWithLight.ipynb
+++ b/notebooks/FunWithLight.ipynb
@@ -26,7 +26,7 @@
     }
    ],
    "source": [
-    "from aitk.robots import World, Scribbler, RangeSensor, LightSensor, Bulb",
+    "from aitk.robots import World, Scribbler, RangeSensor, LightSensor, Bulb"
    ]
   },
   {
