--- a/notebooks/HillClimbing.ipynb
+++ b/notebooks/HillClimbing.ipynb
@@ -24,7 +24,7 @@
     }
    ],
    "source": [
-    "from aitk.robots import World, Scribbler, SmellSensor",
+    "from aitk.robots import World, Scribbler, SmellSensor"
    ]
   },
   {
