Add Badges and pip install cells to all notebooks

--- a/notebooks/CartWorld.ipynb
+++ b/notebooks/CartWorld.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/CartWorld.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "AQMTpw5e_0cx"
+   },
+   "outputs": [],
+   "source": [
+    "%pip install aitk --upgrade --quiet"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -33,7 +49,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0…"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0\u2026"
       ]
      },
      "metadata": {},
@@ -71,7 +87,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Image(value=b'', layout=\"Layout(display='none', height='auto', width='-webkit-fill-available')\"…"
+       "VBox(children=(Image(value=b'', layout=\"Layout(display='none', height='auto', width='-webkit-fill-available')\"\u2026"
       ]
      },
      "metadata": {},
@@ -253,7 +269,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "HTML(value='<div style=\"outline: 5px solid #1976D2FF; width: 400px; height: 388px;\"><svg id=\\'keras-network\\' …"
+       "HTML(value='<div style=\"outline: 5px solid #1976D2FF; width: 400px; height: 388px;\"><svg id=\\'keras-network\\' \u2026"
       ]
      },
      "metadata": {},
