--- a/notebooks/ClassifyDigitsWithPCA.ipynb
+++ b/notebooks/ClassifyDigitsWithPCA.ipynb
@@ -3,6 +3,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/ClassifyDigitsWithPCA.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "AQMTpw5e_0cx"
+   },
+   "outputs": [],
+   "source": [
+    "%pip install aitk --upgrade --quiet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Reading in our own dataset"
    ]
