--- a/notebooks/CompassAndBeacon.ipynb
+++ b/notebooks/CompassAndBeacon.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/CompassAndBeacon.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "AQMTpw5e_0cx"
+   },
+   "outputs": [],
+   "source": [
+    "%pip install aitk --upgrade --quiet"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "277dbca5-f69c-4f77-a618-ac7dd3cb6162",
@@ -44,7 +60,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0…"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0\u2026"
       ]
      },
      "metadata": {},
@@ -109,7 +125,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Compass:'), Text(value='compass', description='Name:', layout=Layout(display='flex…"
+       "VBox(children=(Label(value='Compass:'), Text(value='compass', description='Name:', layout=Layout(display='flex\u2026"
       ]
      },
      "metadata": {},
