--- a/notebooks/SeekLight.ipynb
+++ b/notebooks/SeekLight.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/SeekLight.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "AQMTpw5e_0cx"
+   },
+   "outputs": [],
+   "source": [
+    "%pip install aitk --upgrade --quiet"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -79,7 +95,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0…"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0\u2026"
       ]
      },
      "metadata": {},
@@ -103,7 +119,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Range Sensor:'), Text(value='left-ir', description='Name:', layout=Layout(display=…"
+       "VBox(children=(Label(value='Range Sensor:'), Text(value='left-ir', description='Name:', layout=Layout(display=\u2026"
       ]
      },
      "metadata": {},
@@ -117,7 +133,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Range Sensor:'), Text(value='right-ir', description='Name:', layout=Layout(display…"
+       "VBox(children=(Label(value='Range Sensor:'), Text(value='right-ir', description='Name:', layout=Layout(display\u2026"
       ]
      },
      "metadata": {},
@@ -131,7 +147,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Light Sensor:'), Text(value='left-light', description='Name:', layout=Layout(displ…"
+       "VBox(children=(Label(value='Light Sensor:'), Text(value='left-light', description='Name:', layout=Layout(displ\u2026"
       ]
      },
      "metadata": {},
@@ -145,7 +161,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Light Sensor:'), Text(value='right-light', description='Name:', layout=Layout(disp…"
+       "VBox(children=(Label(value='Light Sensor:'), Text(value='right-light', description='Name:', layout=Layout(disp\u2026"
       ]
      },
      "metadata": {},
