--- a/notebooks/NNRobotLab.ipynb
+++ b/notebooks/NNRobotLab.ipynb
@@ -3,8 +3,24 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/NNRobotLab.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "AQMTpw5e_0cx"
+   },
+   "outputs": [],
    "source": [
-    "## Bio-Inspired Artificial Intelligence — Spring 2021\n",
+    "%pip install aitk --upgrade --quiet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bio-Inspired Artificial Intelligence \u2014 Spring 2021\n",
     "# Lab: Teaching Neural Networks to Control Robots"
    ]
   },
@@ -86,7 +102,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0…"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0\u2026"
       ]
      },
      "metadata": {},
@@ -256,7 +272,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "HTML(value='<div style=\"outline: 5px solid #1976D2FF; width: 397px; height: 400px;\"><svg id=\\'keras-network\\' …"
+       "HTML(value='<div style=\"outline: 5px solid #1976D2FF; width: 397px; height: 400px;\"><svg id=\\'keras-network\\' \u2026"
       ]
      },
      "metadata": {},
