--- a/notebooks/Subsumption.ipynb
+++ b/notebooks/Subsumption.ipynb
@@ -3,6 +3,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/Subsumption.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "AQMTpw5e_0cx"
+   },
+   "outputs": [],
+   "source": [
+    "%pip install aitk --upgrade --quiet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Subsumption Architecture\n",
     "\n",
@@ -323,7 +339,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0…"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0\u2026"
       ]
      },
      "metadata": {},
@@ -385,7 +401,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Player(children=(VBox(children=(HBox(children=(FloatSlider(value=0.0, continuous_update=False, description='Ti…"
+       "Player(children=(VBox(children=(HBox(children=(FloatSlider(value=0.0, continuous_update=False, description='Ti\u2026"
       ]
      },
      "metadata": {},
