--- a/notebooks/To_be_a_robot.ipynb
+++ b/notebooks/To_be_a_robot.ipynb
@@ -3,6 +3,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/To_be_a_robot.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "AQMTpw5e_0cx"
+   },
+   "outputs": [],
+   "source": [
+    "%pip install aitk --upgrade --quiet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Computational Essays in Artificial Intelligence"
    ]
@@ -120,7 +136,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0…"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0\u2026"
       ]
      },
      "metadata": {},
@@ -193,7 +209,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\x00\\x80\\x00\\x00\\x00@\\x08\\x06\\x00\\x00\\x00\\xd2\\xd6\\x7f…"
+       "Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\x00\\x80\\x00\\x00\\x00@\\x08\\x06\\x00\\x00\\x00\\xd2\\xd6\\x7f\u2026"
       ]
      },
      "metadata": {},
@@ -388,7 +404,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Time: 00:00:10.00'), HBox(children=(GridspecLayout(children=(Button(description='⬉…"
+       "VBox(children=(Label(value='Time: 00:00:10.00'), HBox(children=(GridspecLayout(children=(Button(description='\u2b09\u2026"
       ]
      },
      "metadata": {},
@@ -509,7 +525,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "－",
+       "description": "\uff0d",
        "layout": "IPY_MODEL_846318091a8f44a2b1e196fcab5712dc",
        "style": "IPY_MODEL_f4cb44e88154463787bf9740c33ca411"
       }
@@ -1154,7 +1170,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "╲",
+       "description": "\u2572",
        "layout": "IPY_MODEL_1c5ebfdbdccc4dd6957d6defb5f31055",
        "style": "IPY_MODEL_f6322d3ffd454440a544f3f8e58ccefd"
       }
@@ -1707,7 +1723,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "｜",
+       "description": "\uff5c",
        "layout": "IPY_MODEL_8539b43e6ebc491eb467b646bb363c1d",
        "style": "IPY_MODEL_21d0c0932559429f9d799365baf4ea8d"
       }
@@ -2115,7 +2131,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "⬈",
+       "description": "\u2b08",
        "layout": "IPY_MODEL_c67cd91b61ec4f53a99d7428c45e60b9",
        "style": "IPY_MODEL_6595f817a2764651b60209cc352d84f7"
       }
@@ -2378,7 +2394,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "➡",
+       "description": "\u27a1",
        "layout": "IPY_MODEL_9493e0ded99f46e1bb2f887173713da2",
        "style": "IPY_MODEL_18a3a2e12db94835bc4286bf3546f378"
       }
@@ -2642,7 +2658,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "－",
+       "description": "\uff0d",
        "layout": "IPY_MODEL_8c9ef88eeb5c400ebc07d4603d2adff4",
        "style": "IPY_MODEL_ada5de858a1f44d5a32ef5143c9905dd"
       }
@@ -2652,7 +2668,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "╱",
+       "description": "\u2571",
        "layout": "IPY_MODEL_cc1c39ec3dc743aba5f7485176ee0c6f",
        "style": "IPY_MODEL_b04bb806bf744cb5a6096bca2efdefa6"
       }
@@ -3043,7 +3059,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "⬅",
+       "description": "\u2b05",
        "layout": "IPY_MODEL_c35d05d9bfd249b4b86db4f506fc27b5",
        "style": "IPY_MODEL_8f1105df94914faa8bdd1966d6cb635b"
       }
@@ -3368,7 +3384,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "⬉",
+       "description": "\u2b09",
        "layout": "IPY_MODEL_ff6574aa98854f54beb0e5cd5689e15c",
        "style": "IPY_MODEL_6fd86e5f6c6d4772bb94cfef5e9a7948"
       }
@@ -4406,7 +4422,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "⬋",
+       "description": "\u2b0b",
        "layout": "IPY_MODEL_230d4fd415e248edbd2e4031792750d2",
        "style": "IPY_MODEL_a416290fe2f64f67aa6e621d6129abc6"
       }
@@ -4446,7 +4462,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "⬆",
+       "description": "\u2b06",
        "layout": "IPY_MODEL_3811e51a3a264b7bb18d1a25c72a8051",
        "style": "IPY_MODEL_674ae62318d04d11bec4b82aa1f8352b"
       }
@@ -4466,7 +4482,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "⬊",
+       "description": "\u2b0a",
        "layout": "IPY_MODEL_d654d85fce7646fdaa859116a2b36a1b",
        "style": "IPY_MODEL_e026a82f6d9f4c7296fbb8b2218a5413"
       }
@@ -6331,7 +6347,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "╲",
+       "description": "\u2572",
        "layout": "IPY_MODEL_9b64d9c9b8644d3eb9825256df75c0b1",
        "style": "IPY_MODEL_27a371232efb482cb1f7dd2d7f220b80"
       }
@@ -6446,7 +6462,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "｜",
+       "description": "\uff5c",
        "layout": "IPY_MODEL_ce9a3651b5014a97bef00abf06e912ad",
        "style": "IPY_MODEL_e4f00a60792c4697b29b32bd48aeecbe"
       }
@@ -6462,7 +6478,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "⬇",
+       "description": "\u2b07",
        "layout": "IPY_MODEL_c3b8c8002643435ab1f82d1bc8172bb8",
        "style": "IPY_MODEL_197032a703c84d339715b3b251890250"
       }
@@ -7602,7 +7618,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "⊙",
+       "description": "\u2299",
        "layout": "IPY_MODEL_9545d9307ca64c6682c79c853e465408",
        "style": "IPY_MODEL_fa3f82163d56427a9dfa5b6665725f6f"
       }
@@ -7691,7 +7707,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "╱",
+       "description": "\u2571",
        "layout": "IPY_MODEL_1ee43feafdf743c8aeb86711e99eaac0",
        "style": "IPY_MODEL_06f1577cfe9046d59beba3e844fd45ce"
       }
